Begin working add product
