# laravel.pv125.com/routes/api.php
@@ -2,6 +2,7 @@
 
 use App\Http\Controllers\AuthController;
 use App\Http\Controllers\CategoryController;
+use App\Http\Controllers\ProductController;
 use Illuminate\Http\Request;
 use Illuminate\Support\Facades\Route;
 
@@ -37,3 +38,9 @@ Route::group([
     Route::post('/refresh', [AuthController::class, 'refresh']);
     Route::get('/user-profile', [AuthController::class, 'userProfile']);
 });
+
+Route::get("/product", [ProductController::class, "index"]);
+Route::post("/product", [ProductController::class, "store"]);
+Route::post("/product/edit/{id}", [ProductController::class, "update"]);
+Route::delete("/product/{id}", [ProductController::class, "delete"]);
+Route::get('/product/{id}', [ProductController::class, "getByid"]);
